--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -6,10 +6,6 @@
             "packagist": false
         },
         {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
-            "type": "vcs"
-        },
-        {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
             "type": "composer"
         },
@@ -65,7 +61,7 @@
         "olcs/olcs-cpms": "~4.206.0",
         "olcs/olcs-dvla-search": "~1.0.0",
         "olcs/olcs-logging": "~4.206.0",
-        "olcs/olcs-transfer": "dev-project/lgv-post-mvp",
+        "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
         "olcs/olcs-xmltools": "~4.206.0",
         "oro/doctrine-extensions": "^1.2",
