--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "phpseclib/phpseclib": "^2.0.6",
         "qandidate/toggle": "^1.1",
         "ramsey/uuid": "^3.6",
-        "ruflin/elastica": "~6.1",
+        "ruflin/elastica": "7.1",
         "simplesamlphp/saml2": "~3.4.2",
         "soflomo/purifier": "^1.0",
         "symfony/filesystem": "^5",
