--- a/composer.json
+++ b/composer.json
@@ -108,12 +108,17 @@
         "platform": {
             "php": "7.4.26"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "elendev/composer-push": true,
+            "phpstan/extension-installer": true,
+            "laminas/laminas-dependency-plugin": true
+        }
     },
     "scripts": {
         "ut": "phpunit -c test/phpunit.xml --stop-on-failure",
         "review": "review",
-        "cs": "phpcs --severity=1 --standard=vendor/olcs/coding-standards/Profiles/DVSA/CS/ruleset.xml",
+        "cs": "phpcs --severity=1 --standard=vendor/dvsa/coding-standards/src/Profiles/DVSA/CS/ruleset.xml",
         "coverage": "phpunit -c test/phpunit.xml --coverage-html ./test/coverage/html",
         "sonar": "phpunit -c test/phpunit.xml --coverage-clover ./test/coverage/coverage-report.clover --log-junit ./test/coverage/log.junit",
         "update-syms": "composer-update-syms"
