--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
     "require": {
         "php": ">=7.4",
         "ext-intl": "*",
+        "ext-json": "*",
         "aws/aws-sdk-php": "^3.183",
         "beberlei/doctrineextensions": "^1.0",
         "doctrine/doctrine-orm-module": "^1.0.0",
         "doctrine/orm": "~2.6.3",
         "doctrine/persistence": "~1.3.4",
         "dvsa/authentication-cognito": "^2.0",
+        "dvsa/php-govuk-account": "^1.0",
         "fzaninotto/faker": "^1.9",
         "gedmo/doctrine-extensions": "~2.4.39",
         "laminas/laminas-authentication": "^2.5",
