--- a/composer.json
+++ b/composer.json
@@ -27,33 +27,9 @@
         "dvsa/php-govuk-account": "^1.0",
         "fzaninotto/faker": "^1.9",
         "gedmo/doctrine-extensions": "~2.4.39",
-        "laminas/laminas-authentication": "^2.5",
-        "laminas/laminas-cache": "^2.5",
-        "laminas/laminas-console": "^2.5",
-        "laminas/laminas-dependency-plugin": "^2.0",
-        "laminas/laminas-eventmanager": "^2.5",
-        "laminas/laminas-filter": "^2.5",
-        "laminas/laminas-http": "^2.5",
-        "laminas/laminas-i18n": "^2.5",
-        "laminas/laminas-inputfilter": "^2.5",
-        "laminas/laminas-json": "^2.5",
-        "laminas/laminas-loader": "^2.5",
-        "laminas/laminas-log": "^2.5",
-        "laminas/laminas-mail": "^2.5",
-        "laminas/laminas-mime": "^2.5",
-        "laminas/laminas-modulemanager": "^2.5",
-        "laminas/laminas-mvc": "^2.5",
-        "laminas/laminas-serializer": "^2.5",
-        "laminas/laminas-servicemanager": "^2.5",
-        "laminas/laminas-session": "^2.5",
-        "laminas/laminas-stdlib": "^2.5",
-        "laminas/laminas-text": "^2.5",
-        "laminas/laminas-uri": "^2.5",
-        "laminas/laminas-validator": "^2.5",
-        "laminas/laminas-view": "^2.5",
         "league/flysystem": "^1.0",
         "league/flysystem-webdav": "1.0.10",
-        "lm-commons/lmc-rbac-mvc": "^2.6",
+        "olcs/olcs-laminas": "~2.5.0",
         "olcs/olcs-companies-house": "~4.206.0",
         "olcs/olcs-cpms": "~4.206.0",
         "olcs/olcs-dvla-search": "~1.0.0",
@@ -108,7 +84,7 @@
         "preferred-install": "dist",
         "secure-http": false,
         "platform": {
-            "php": "7.4.26"
+            "php": "7.4.33"
         },
         "sort-packages": true,
         "allow-plugins": {
