--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,7 @@
         "twig/twig": "^2.0"
     },
     "require-dev": {
-        "olcs/olcs-devtools": "~4.206.0",
-        "olcs/olcs-testhelpers": "~4.206.0"
+        "olcs/olcs-devtools": "~4.206.0"
     },
     "autoload": {
         "classmap": [
