--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
         "aws/aws-sdk-php": "^3.183",
         "beberlei/doctrineextensions": "^1.0",
         "doctrine/doctrine-orm-module": "^1.0.0",
-        "doctrine/orm": "~2.6.3",
+        "doctrine/orm": "~2.7.5",
         "dvsa/authentication-cognito": "^2.0",
         "dvsa/php-govuk-account": "^1.0",
         "fzaninotto/faker": "^1.9",
-        "gedmo/doctrine-extensions": "~2.4.39",
+        "gedmo/doctrine-extensions": "^3",
         "league/flysystem": "^1.0",
         "league/flysystem-webdav": "1.0.10",
         "olcs/olcs-laminas": "~2.5.0",
@@ -37,7 +37,7 @@
         "olcs/olcs-transfer": "~4.206.0",
         "olcs/olcs-utils": "~4.206.0",
         "olcs/olcs-xmltools": "~4.206.0",
-        "oro/doctrine-extensions": "^1.2",
+        "oro/doctrine-extensions": "^2",
         "phprtflite/phprtflite": "~1.3.3",
         "phpseclib/phpseclib": "^2.0.6",
         "qandidate/toggle": "^1.1",
