--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -300,14 +300,32 @@ jobs:
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
       uses: actions/github-script@v6.4.1
       with:
-        # github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          github.rest.actions.createWorkflowDispatch({
-            owner: 'dvsa',
-            repo: 'olcs-backend',
-            workflow_id: 'qa-vol-api-approval.yaml',
-            ref: 'feature/AWSRESET1-514',
+          const octokit = new Octokit({
+            auth: '${{ secrets.GITHUB_TOKEN }}'
           })
+
+          await octokit.request('POST /repos/dvsa/olcs-backend/actions/workflows/non-prod-vol-api-build-deploy.yaml/dispatches', {
+            owner: 'dvsa',
+            repo: 'ocls-backend',
+            workflow_id: 'non-prod-vol-api-build-deploy.yaml',
+            ref: 'feature/AWSRESET1-514',
+            inputs: {
+              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a'
+            },
+            headers: {
+              'X-GitHub-Api-Version': '2022-11-28'
+            }
+          })
+      # with:
+      #   # github-token: ${{ secrets.GITHUB_TOKEN }}
+      #   script: |
+      #     github.rest.actions.createWorkflowDispatch({
+      #       owner: 'dvsa',
+      #       repo: 'olcs-backend',
+      #       workflow_id: 'qa-vol-api-approval.yaml',
+      #       ref: 'feature/AWSRESET1-514',
+      #     })
       # with:
       #   github-token: ${{ secrets.GITHUB_TOKEN }}
         # script: |
