--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -298,18 +298,24 @@ jobs:
       # if: github.ref == 'refs/heads/main'
       # run: |
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-      uses: actions/github-script@v6
-      with:
-        script: |
-          github.rest.actions.createWorkflowDispatch({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            workflow_id: 'qa-vol-api-approval.yaml',
-            ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
-          })
+      run: |
+        gh workflow run 'CD NON-PROD VOL API' \
+          -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 \
+          -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+      env:
+        GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+      # uses: actions/github-script@v6
+      # with:
+      #   script: |
+      #     github.rest.actions.createWorkflowDispatch({
+      #       owner: context.repo.owner,
+      #       repo: context.repo.repo,
+      #       workflow_id: 'qa-vol-api-approval.yaml',
+      #       ref: 'feature/AWSRESET1-514',
+      #       inputs: {
+      #         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+      #       },
+      #     })
       # with:
       #   # github-token: ${{ secrets.GITHUB_TOKEN }}
       #   script: |
