--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -310,6 +310,7 @@ jobs:
               vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
             },
           })
+        wait-interval: 10
       # if: github.ref == 'refs/heads/main'
       # run: |
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
