--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -255,17 +255,19 @@ jobs:
       uses: actions/github-script@v6.4.1
       with:
         script: |
-          await github.rest.actions.createWorkflowDispatch({
-            owner: context.repo.owner,
-            repo: 'dvsa-container-registry',
-            workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-            ref: 'feature/AWSRESET1-514',
-            inputs: {
-              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-            },
-          })
-      env:
-        GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+          gh workflow run 'CD NON-PROD VOL API' -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+        # script: |
+        #   await github.rest.actions.createWorkflowDispatch({
+        #     owner: context.repo.owner,
+        #     repo: 'dvsa-container-registry',
+        #     workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+        #     ref: 'feature/AWSRESET1-514',
+        #     inputs: {
+        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+        #     },
+        #   })
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
         # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
         # script: |
         #   await github.rest.actions.createWorkflowDispatch({
