--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -252,9 +252,10 @@ jobs:
       # if: github.ref == 'refs/heads/main'
       # run: |
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-      uses: actions/github-script@v6.4.1
-      with:
-        script: |
+      # uses: actions/github-script@v6.4.1
+      # with:
+      #   script: |
+      run: |
           gh workflow run 'CD NON-PROD VOL API' -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
         # script: |
         #   await github.rest.actions.createWorkflowDispatch({
