--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -247,28 +247,32 @@ jobs:
     # - build-test-push-sign-image
 
     steps:
-  
+
+
     - name: Trigger workflow 'nonprod-vol-api-manual-cd.yaml'
+      uses: actions/github-script@v6
+      with:
+        script: |
+          await github.rest.actions.createWorkflowDispatch({
+            owner: context.repo.owner,
+            repo: 'dvsa-container-registry',
+            workflow_id: 'nonprod-vol-api-manual-cd.yaml',
+            ref: 'feature/AWSRESET1-514',
+            inputs: {
+              vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
+            },
+          })
+        # wait-interval: 10
       # if: github.ref == 'refs/heads/main'
       # run: |
       #   echo "Here: ${{ needs.build-test-push-sign-image.outputs.image_tag }}"
-      # uses: actions/github-script@v6.4.1
-      # with:
-      #   script: |
-      run: |
-          gh workflow run 'CD NON-PROD VOL API' -R dvsa/dvsa-container-registry --ref feature/AWSRESET1-514 -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
-        # script: |
-        #   await github.rest.actions.createWorkflowDispatch({
-        #     owner: context.repo.owner,
-        #     repo: 'dvsa-container-registry',
-        #     workflow_id: 'nonprod-vol-api-manual-cd.yaml',
-        #     ref: 'feature/AWSRESET1-514',
-        #     inputs: {
-        #       vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a',
-        #     },
-        #   })
+      # run: |
+      #   gh workflow run 'QA VOL API ARTIFACT APPROVAL' --ref feature/AWSRESET1-514 \
+      #     -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+      #   gh run watch -i1
       env:
         GITHUB_TOKEN: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+  
         # github-token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
         # script: |
         #   await github.rest.actions.createWorkflowDispatch({
